1. 提交kafka文档